--- a/command/command.csproj
+++ b/command/command.csproj
@@ -73,11 +73,13 @@
     <Compile Include="Data\Market.cs" />
     <Compile Include="Data\Symbol.cs" />
     <Compile Include="Data\TimeInterval.cs" />
-    <Compile Include="Data\Analyzer.cs" />
     <Compile Include="Data\Indicator\Candle.cs" />
     <Compile Include="Data\Indicator\MovingAverage.cs" />
     <Compile Include="Data\Indicator\ExponentialMovingAverage.cs" />
     <Compile Include="Data\Indicator\IndicatorUnit.cs" />
+    <Compile Include="Data\Indicator\Analyzer.cs" />
+    <Compile Include="Data\Ticker.cs" />
+    <Compile Include="Data\Chart\Candlestick.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
@@ -90,6 +92,7 @@
     <Folder Include="Data\" />
     <Folder Include="WebSocket\" />
     <Folder Include="Data\Indicator\" />
+    <Folder Include="Data\Chart\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="WebSocket\Newtonsoft.Json.dll" />
