--- a/command/command.csproj
+++ b/command/command.csproj
@@ -81,6 +81,7 @@
     <Compile Include="Data\Chart\Signal.cs" />
     <Compile Include="Data\Chart\MACDOscillator.cs" />
     <Compile Include="Data\Chart\Candle.cs" />
+    <Compile Include="Data\Chart\BollingerBand.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
