--- a/command/command.csproj
+++ b/command/command.csproj
@@ -85,6 +85,7 @@
     <Compile Include="Data\Chart\Candle.cs" />
     <Compile Include="Data\Chart\BollingerBand.cs" />
     <Compile Include="Data\Balance.cs" />
+    <Compile Include="ConsoleIO.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
