--- a/command/command.csproj
+++ b/command/command.csproj
@@ -86,6 +86,7 @@
     <Compile Include="ConsoleIO.cs" />
     <Compile Include="Data\Chart\Indicator.cs" />
     <Compile Include="Brain\TradeLogic.cs" />
+    <Compile Include="Data\OrderBook.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
